--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "elm-test": "^0.19.0-rev5",
         "elm-verify-examples": "^3.0.1",
         "elm-webpack-loader": "^5.0.0",
+        "favicons-webpack-plugin": "^0.0.9",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
@@ -45,7 +46,6 @@
     "prettier": {
         "tabWidth": 4,
         "trailingComma": "es5",
-        "tabWidth": 4,
         "semi": false,
         "jsxBracketSameLine": true,
         "printWidth": 120
