--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "dev": "webpack-dev-server --hot --colors --port 3000",
         "build": "webpack",
         "prod": "webpack -p",
-        "analyse": "elm-analyse -s -p 3001 -o"
+        "analyse": "elm-analyse -s -p 3001 -o",
+        "deploy": "gh-pages -d dist -b master -r 'git@github.com:lambda-tree/lambda-tree.github.io.git'"
     },
     "devDependencies": {
         "@babel/core": "^7.3.4",
@@ -28,6 +29,7 @@
         "elm-webpack-loader": "^5.0.0",
         "favicons-webpack-plugin": "^0.0.9",
         "file-loader": "^3.0.1",
+        "gh-pages": "^2.0.1",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
         "node-sass": "^4.11.0",
