--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "gh-pages": "^2.0.1",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.5.0",
+        "node": "^12.2.0",
         "node-sass": "^4.11.0",
         "resolve-url-loader": "^3.0.1",
         "sass-loader": "^7.1.0",
